source/stylesheets/sections/homepage.css.scss
@import "../base/core";

body {
   background-color: #0d0d0d;
}

.header-content {
	max-width: 100%;
}

a {
	&.bar, &.left, &.right {
		text-decoration: none;
	}
}

#main-container {
	margin-top: 55px;
}

// Heros
#democracy {
	.photo-container {
		background-image: image-url('home/democracy.png');	
	}
	
	.title {
		.tag {
			color: #9B9B9B;	
		}
		.name {
			color: #D75F4E;	
		}
		.sub-name {
			color: #6C8696;	
		}
	}
}

#oral-history{
	.photo-container {
		background-image: image-url('home/oral-history.jpg');	
	}
	
	.title {
		.tag {
			color: #f9f9f9;	
		}
		.name {
			color: #f9f9f9;	
		}
		.sub-name {
			color: #f9f9f9;	
		}
	}
}

#from-bathroom-to-healthroom {
	background-color: rgba(0,0,0,.5);
	.photo-container {
		background:rgba(0, 0, 0, 0.5) image-url('home/bathroom.jpg');
		background-size: cover;
	}
	
	.title {
		color: white;
	}
}

#world-cup .photo-container {
	background-image: image-url('features/world-cup/hero.jpg');
}

#hgraph .photo-container{
	background-image: image-url('home/hgraph_large.png');
}

#oracle .photo-container{
	background-image:  image-url('home/oracle.jpg');
}

#three-m .photo-container{
	background-image: image-url('home/3m.jpg');
}

#culture .photo-container {
	background-image: image-url('home/culture.jpg');
}

#ebola-guide {
	.photo-container {
		background-image: image-url('features/ebola-care-guideline/haz_zoom_bg.png');
		background-position: 85% 20%;
		background-color: rgb(229, 245, 245);
	}
	.title .name {
		color: #373D3D;
	}
	.sub-name {
		color: rgb(85, 93, 98);
	}	
}

#ebola {
	  //padding-top: 75px;
		//padding-bottom: 75px;
  
    .photo-container {
      background-image: image-url('home/ebola.png');
    }
  
		.title {
			.name {
				color: #00C4E9;	
			}
			.sub-name {
				color: #A5DEF1;	
			}
	}
}

#disrupt {
  .photo-container {
    display: none;
    background-image: image-url('features/disrupt/video_fallbacks/section-5-top.jpg');
    background-position: 40% 0;
    @media only screen and (max-width: 760px) {
      display: block;
    }
  }
}

#blog .title {
	width: 100%;
	padding: 1em 3em;
	background: rgba(0,0,0,.55);
}
#blog .title:after {
	z-index: -10;
	content: "";
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background: fade-out(#000, 0.5);
	width:100%;
}

.double {
	display: table;
	width: 100%;
	min-height: 309px;
	position:relative;
}

#homepage-hero {
	min-height: 578px;
	background-size: cover;
	
	&.iphone-images-style {
		min-height: 700px;
		
		.photo-container {
			min-height: 700px;	
		}
		
		.title {
			text-align: center;	
			padding: 1em 3em;
			
		}
		
		.actual-content {
			max-width: 560px;
			margin: 0 auto;
			margin-top: 12px;
		}
		
		@media only screen and (min-width: 1175px) {
			.photo-container {
				background-size: 1050px !important;
			}
		}
		
		@media only screen and (max-width: 800px) {
			.photo-container {
				background-size: 140% !important;
			}
		}
		
		@media only screen and (max-width: 750px) {
			.title {
				//padding-top: 3em;
				.actual-content {
					margin-top: 1em;	
					margin-bottom: .5em;
				}
			}
		}
	}
	
	.photo-container, .video-container {
		//background-image: image-url('home/hp-1.png');
		min-height: 578px;
		background-size: cover;
		background-position-y: bottom;
		
		video {
			width: 100%;
			height: auto;
		}
	}
	
	.title {
		top: 24px;
		color: #33353d;
		
		@media only screen and (max-width: 750px){
			top: 10px;
  			background-color: rgba(255,255,255,.75);
		}
	}
	
	
	.actual-title {
		font-size: 75px;	
		@media only screen and (max-width: 1380px)  and (min-width: 1213px){
			font-size: 65px;
			line-height: 75px;
		}
		
		@media only screen and (max-width: 1213px) and (min-width: 750px){
			font-size: 60px;
			line-height: 70px;
		}
		
		@media only screen and (max-width: 750px){
			font-size: 50px;
			line-height: 52px;
		}
		
		
	}
	
	.actual-content {
		font-size: 32px;
		max-width: 470px;
		margin-top: 9px;
		line-height: 41px;
		
		@media only screen and (max-width: 750px){
			font-size: 26px;
			line-height: 36px;
			margin-top: 20px;
		}
	}
	
	.actual-button {
		margin-top: 25px;
		border: 1px solid rgba(51, 53, 61, 0.49);
		border-radius: 5px;
		font-size: 24px;
		display: inline-block;
		padding: 10px 55px;
		transition: 250ms;
		background-color: rgba(255,255,255,.9);	
		&:hover {
			transform: scale(1.1,1.1);
			background-color: rgba(255,255,255,1);	
		}
	}
}

.actual-button {
	margin-top: 25px;
	border: 1px solid #ffffff;
	border-radius: 5px;
	display: inline-block;
	padding: 10px;
	transition: 350ms;
	cursor: pointer;

	&:hover {
		transform: scale(1.1,1.1);
		background: rgba(0,0,0,.2);	
	}
}

.contact-container {
	background-size: cover;	
	text-align: center;
	padding-bottom: 1em;
	color: white;
	a .actual-button {
		color: white;	
	}
	
	.actual-button {
		padding-Left: 30px;
		padding-right: 30px;
		font-size: 23px;
	}
	
	.sub-title {
		margin-top: .65em;	
	}
	
	@media only screen and (max-width: 750px) {
		display: none;	
	}
}

.clients, .news {
	background: #f9f9f9;
	text-align: center;
	color: #9B9B9B;

	.small-title {
		font-size: 32px;
		line-height: 38px;
		margin: 0 20px 30px;
		padding-top: 60px;
		text-align: center;
	}

	table.non-mobile {
		width: 100%;
		
		@media  only screen and (max-width: 500px) {
			display: none !important;
		}
		
		tbody {
			tr {
				td {
					text-align: center;
					padding: 25px 15px;
					vertical-align: middle;
					max-width: 300px;
					img {
						margin: 0 auto;	
					}
				}
			}
		}
	}
	ul.mobile {
		display: none;
		list-style: none;
		width: auto;
		margin: 0 auto;
		
		@media  only screen and (max-width: 500px) {
			display: inline-block !important;
		}
		
		li {
			margin: 0 auto;
	        width: 85%;
			margin-bottom: 40px;
			text-align: center;
			img {
				margin: 0 auto;	
				margin-bottom: 15px;
			}
			a {
				color: #9B9B9B;
			}
		}
	}
}

.news table.non-mobile tbody tr:first-child td {
	padding: 5px 15px;
}

.news table.non-mobile tbody tr:last-child td {
	padding-top: 0;
	padding-bottom: 60px;
}

.recent-blog-post .block {
	border-bottom-width: 0px;	
}


.block {
	position: relative;
	display: block;
	box-shadow: 0 0 0px #000;
	overflow: hidden;
	z-index: 0;
	min-height: 472px;
	max-height: 472px;
	
	.photo-container {
		transition: transform 500ms ease-in-out;
		background-size: cover;
		background-position: left center;
		background-repeat: no-repeat;
		width:100%;
		min-height: 472px;
		transform: scale(1, 1);	
		
	}
	
.video-container, .photo-container  {
    width: 100%;
    min-height: 472px;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    transition: transform 500ms ease-in-out;
    #disrupt-vid {
      position: absolute;
      bottom: 0; 
      right: 0;
      min-width: 100%; 
      min-height: 100%; 
      width: auto; 
      height: auto;
      z-index: -1000; 
      overflow: hidden;

      @media only screen and (min-width: 1650px) {
        transform: translateY(10%);
      }
      @media only screen and (min-width: 1900px) {
        transform: translateY(20%);
      }
      @media only screen and (min-width: 2150px) {
        transform: translateY(30%);
      }
      @media only screen and (max-width: 1350px) {
        transform: translateX(10%);
      }
      @media only screen and (max-width: 1200px) {
        transform: translateX(12%);
      }
      @media only screen and (max-width: 1000px) {
        transform: translateX(25%);
      }
      @media only screen and (max-width: 760px) {
        display: none;
      }
    }
  }
	
	&:hover {
		.photo-container {
			transform: scale(1.03, 1.03);	
		}
		.video-container {
		  transform: scale(1.1, 1.1);
		}
	}	
	
	//Layouts
	&.bar {
		width: 100%;
		position: relative;
	}
	&.half {
		width: 50%;
		display: table-cell;
	}
	// Styling
	.title {
		padding: 2em 3em;
		font-size: 1.25em;
		color: $white;
		position:absolute;
		bottom: 0;
		width: 100%;
		//Fix for OSX Font Rendering on Dark BG's
		-webkit-font-smoothing: antialiased;
		-moz-osx-font-smoothing: grayscale;
		h2, h3, h5 {
			font-weight: 400;
			margin-bottom: 0;
		}
		.name {
			font-size:75px;	
			margin-bottom:0px;
		}
		.sub-name {
			font-size:40px;	
		}
		h2 {
			font-size: 40px;
			margin-bottom: 0.2em;
		}
		h3 {
			font-size: 1.65em;
		}
		.tag, .button {
			display: inline-block;
			margin-bottom: 1em;
			text-transform: uppercase;
			font-size: 23px;
		}
    .tag {
       margin-bottom: 10px; 
    }
	}
}

@media only screen and (max-width: 1024px) {
	.block .title {
		font-size: 1em;
	}
}

@media only screen and (max-width: 640px) {
	.double {
		display: block;
	}
	.block.half {
		display: block;
		width: 100%;
	}
	
	.block, .block .photo-container {
		min-height: 600px;	
	}
}

@media only screen and (max-width: 600px) {	
	.block {
		.title {
			.tag {
				font-size: 14px;	
			}
			.name {
				font-size: 60px;
			}
			.sub-name {
				font-size: 26px;	
			}
		}		
	}
}

